[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libero"
version = "0.1.0"
description = "LIBERO: Benchmarking Knowledge Transfer for Lifelong Robot Learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bo Liu", email = "bliu@cs.utexas.edu"},
    {name = "Yifeng Zhu", email = "yifengz@cs.utexas.edu"},
    {name = "Chongkai Gao"},
    {name = "Yihao Feng"},
    {name = "Qiang Liu"},
    {name = "Yuke Zhu"},
    {name = "Peter Stone"}
]
keywords = ["robotics", "lifelong-learning", "robot-learning", "benchmark", "knowledge-transfer"]

requires-python = ">=3.8"
dependencies = []


[tool.setuptools.packages.find]
where = ["."]  # Look in current directory
include = ["libero*"]  # Include packages starting with "libero"
exclude = ["tests*", "docs*"]  # Exclude test and doc directories

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*"]
"libero" = ["assets/**/*", "configs/**/*", "*.yaml", "*.xml"]
"libero.envs" = ["*.xml", "*.obj", "*.mtl", "*.png", "*.stl"]

